add this all page

--- a/outdoor_toy.html
+++ b/outdoor_toy.html
@@ -45,7 +45,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="about_us.html">About Us</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="products.html">Toys & Games
+                        <li class="nav-item"><a class="nav-link" href="toys-games.html">Toys & Games
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
                             <ul class="dropdown-menu">
@@ -54,13 +54,13 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="educational.html"> Educational
+                                                    <a class="dropdown-item" href="educational_toy.html"> Educational
                                                         Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="construction.html">Construction Toy
+                                                    <a class="dropdown-item" href="construction_toy.html">Construction Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -80,12 +80,12 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="puzzle.html"> Puzzle Game </a>
+                                                    <a class="dropdown-item" href="puzzle_game.html"> Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="building.html"> Building Blocks </a>
+                                                    <a class="dropdown-item" href="building_blocks.html"> Building Blocks </a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -117,8 +117,8 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="birthday.html" class="nav-link">Birthday Gifts</a></li>
-                        <li class="nav-item"><a href="corporate.html" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="birthday_gifts.html" class="nav-link">Birthday Gifts</a></li>
+                        <li class="nav-item"><a href="corporate_gifts.html" class="nav-link">Corporate Gifts</a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto">
@@ -157,9 +157,9 @@
                         </span>
                     </a>
                 </li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="birthday.html">Birthday Gifts</a></li>
-                <li><a href="corporate.html">Corporate Gifts</a></li>
+                <li><a href="toys-games.html">Products</a></li>
+                <li><a href="birthday_gifts.html">Birthday Gifts</a></li>
+                <li><a href="corporate_gifts.html">Corporate Gifts</a></li>
             </ul>
         </div>
     </div>
@@ -183,12 +183,12 @@
         </div>
         <div class="offcanvas-body">
             <ul class="nav-item list-unstyled mb-0">
-                <li><a href="educational.html">Educational Toy</a> </li>
-                <li><a href="construction.html">Construction Toy</a></li>
+                <li><a href="educational_toy.html">Educational Toy</a> </li>
+                <li><a href="construction_toy.html">Construction Toy</a></li>
                 <li><a href="board_game.html">Board Game</a></li>
                 <li><a href="musical_toy.html">Musical Toy</a></li>
-                <li><a href="puzzle.html">Puzzle Game</a></li>
-                <li><a href="building.html">Building Blocks</a></li>
+                <li><a href="puzzle_game.html">Puzzle Game</a></li>
+                <li><a href="building_blocks.html">Building Blocks</a></li>
                 <li><a href="sports_toy.html">Sports Toy</a></li>
                 <li><a href="creative_toy.html">Creative Toy</a></li>
                 <li><a href="baby_toy.html">Baby Toy</a></li>
@@ -203,7 +203,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="pt-5"><b>Outdoor Toys</b></h2>
+                    <h2 class="pt-5"><b><a href="outdoor_toy.html">Outdoor Toys</a></b></h2>
                 </div>
             </div>
             <div class="row">
@@ -647,37 +647,46 @@
      <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
-                <div class="col-md-4 pt-4 pb-4">
+                <div class="col-md-3 pt-4 pb-4">
                     <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
                             class="img-fluid pb-4"></a><br>
-                            <i class="text-light">Shipra is your one-stop destination for high-quality products across categories like toys, home essentials, educational tools, and more. We are committed to offering a seamless shopping experience, combining reliability, affordability, and variety. you're a parent looking for smart toys, a reseller searching for bulk deals, or a gift-giver seeking something unique, Shipra delivers trusted quality and unmatched service right to your doorstep. </i><br>
-                           
-                </div>
-                <div class="col-md-4 px-5 pt-4 pb-4">
-                    <div class="contact-form">
-                        <h2><a href="products.html">Toys & Games</a></h2>
-                        <ul class="list-unstyled">
-                            <li class="mb-1"><a href="educational.html">Educational Toy</a></li>
+                    <i class="text-light">Shipra is your one-stop destination for high-quality products across
+                        categories like toys, home essentials, educational tools, and more. We are committed to offering
+                        a seamless shopping experience, combining reliability, affordability, and variety. you're a
+                        parent looking for smart toys, a reseller searching for bulk deals, or a gift-giver seeking
+                        something unique, Shipra delivers trusted quality and unmatched service right to your doorstep.
+                    </i><br>
 
-                            <li class="mb-1"><a href="construction.html">Construction Toy</a></li>
+                </div>
+                <div class="col-md-3 px-5 pt-4 pb-4">
+                    <div class="contact-form">
+                        <h2><a href="toys-games.html">Toys & Games</a></h2>
+                        <ul class="list-unstyled">
+                            <li class="mb-1"><a href="educational_toy.html">Educational Toy</a></li>
+
+                            <li class="mb-1"><a href="construction_toy.html">Construction Toy</a></li>
 
                             <li class="mb-1"><a href="board_game.html"> Board Game</a></li>
 
                             <li class="mb-1"> <a href="musical_toy.html">Musical Toy</a> </li>
 
-                            <li class="mb-1"> <a href="puzzle.html"> Puzzle Game </a> </li>
+                            <li class="mb-1"> <a href="puzzle_game.html"> Puzzle Game </a> </li>
 
-                            <li class="mb-1"> <a href="building.html"> Building Blocks </a> </li>
-
-                            <li class="mb-1"><a href="sports_toy.html"> Sports Toy </a> </li>
-
-                            <li class="mb-1"> <a href="creative_toy.html"> Creative Toy </a></li>
-
-                            <li class="mb-1"> <a href="baby_toy.html"> Baby Toy</a></li>
-
-                            <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
                         </ul>
                     </div>
+                </div>
+                <div class="col-md-2 pt-5 pb-4">
+                    <ul class="list-unstyled pt-4">
+                        <li class="mb-1"> <a href="building_blocks.html"> Building Blocks </a> </li>
+
+                        <li class="mb-1"><a href="sports_toy.html"> Sports Toy </a> </li>
+
+                        <li class="mb-1"> <a href="creative_toy.html"> Creative Toy </a></li>
+
+                        <li class="mb-1"> <a href="baby_toy.html"> Baby Toy</a></li>
+
+                        <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
+                    </ul>
                 </div>
                 <div class="col-md-4 pt-4 pb-4">
                     <h2>Contact Us</h2>
@@ -687,14 +696,13 @@
                         </div>
                         <div class="px-3">
                             <span>Mumbai, Noida , Rajkot , Surat</span><br>
-                            <a href="#"> <span>Get Directions</span>
-                                <i class="fa-solid fa-right-long text-white"></i></a>
+
                         </div>
                     </div>
                     <div class="d-flex pt-4">
 
                         <div class="pt-1">
-                            <a href="mailto:prash108nc@gmail.com">
+                            <a href=" shooppingcrafts@gmail.com">
                                 <i class="fa-solid fa-envelope contact-logo"></i>
                         </div>
                         <div class="px-3">
@@ -704,35 +712,35 @@
                     </div>
                     <div class="d-flex pt-4">
                         <div class="pt-1">
-                            <a href="tel:9175371081">
+                            <a href="tel:9579613569 ">
                                 <i class="fa-solid fa-phone contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>9175371081</span>
+                            <span>9579613569 </span>
                         </div>
                         </a>
                     </div>
                     <div class=" py-4 py-md-0 mt-md-4">
                         <span class="pe-3">Share:</span>
-                        <span class="contact-socialMediaIcon"><a href="#"><i
+                        <span class="contact-socialMediaIcon"><a href="https://www.facebook.com/shipraplayhouse"><i
                                     class="fa-brands fa-facebook-f"></i></a></span>
-                        <span class="contact-socialMediaIcon"><a href="#"><i
-                                    class="fa-brands fa-linkedin-in"></i></a></span>
-                        <span class="contact-socialMediaIcon"><a href="#"><i
-                                    class="fa-brands fa-x-twitter"></i></a></span>
+                        <span class="contact-socialMediaIcon"><a href="https://www.youtube.com/@shipraplayhouse"><i
+                                    class="fa-brands fa-youtube"></i></a></span>
                         <span class="contact-socialMediaIcon"><a href="https://wa.link/tlxn9m"><i
                                     class="fa-brands fa-whatsapp"></i></a></span>
                         <span class="contact-socialMediaIcon"><a href="mailto:prash108nc@gmail.com"><i
                                     class="fa-solid fa-envelope"></i></a></span>
-                        <span class="contact-socialMediaIcon"><a href="#"><i
+                        <span class="contact-socialMediaIcon"><a href=" https://www.instagram.com/shipraplayhouse/"><i
                                     class="fa-brands fa-instagram"></i></a></span>
                     </div>
 
                 </div>
-                 <hr class="text-light">
-                <i class="text-center text-light"><b>© Shopping Crafts.</b> All rights reserved</i>
+                <hr class="text-light">
+                <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
             </div>
         </div>
+        </div>
+
     </section>
     <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
