--- a/sports_toy.html
+++ b/sports_toy.html
@@ -45,7 +45,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="about_us.html">About Us</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="products.html">Toys & Games
+                        <li class="nav-item"><a class="nav-link" href="toys-games.html">Toys & Games
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
                             <ul class="dropdown-menu">
@@ -54,13 +54,13 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="educational.html"> Educational
+                                                    <a class="dropdown-item" href="educational_toy.html"> Educational
                                                         Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="construction.html">Construction Toy
+                                                    <a class="dropdown-item" href="construction_toy.html">Construction Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -80,12 +80,12 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="puzzle.html"> Puzzle Game </a>
+                                                    <a class="dropdown-item" href="puzzle_game.html"> Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="building.html"> Building Blocks </a>
+                                                    <a class="dropdown-item" href="building_blocks.html"> Building Blocks </a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -117,8 +117,8 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="birthday.html" class="nav-link">Birthday Gifts</a></li>
-                        <li class="nav-item"><a href="corporate.html" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="birthday_gifts.html" class="nav-link">Birthday Gifts</a></li>
+                        <li class="nav-item"><a href="corporate_gifts.html" class="nav-link">Corporate Gifts</a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto">
@@ -157,9 +157,9 @@
                         </span>
                     </a>
                 </li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="birthday.html">Birthday Gifts</a></li>
-                <li><a href="corporate.html">Corporate Gifts</a></li>
+                <li><a href="toys-games.html">Products</a></li>
+                <li><a href="birthday_gifts.html">Birthday Gifts</a></li>
+                <li><a href="corporate_gifts.html">Corporate Gifts</a></li>
             </ul>
         </div>
     </div>
@@ -183,12 +183,12 @@
         </div>
         <div class="offcanvas-body">
             <ul class="nav-item list-unstyled mb-0">
-                <li><a href="educational.html">Educational Toy</a> </li>
-                <li><a href="construction.html">Construction Toy</a></li>
+                <li><a href="educational_toy.html">Educational Toy</a> </li>
+                <li><a href="construction_toy.html">Construction Toy</a></li>
                 <li><a href="board_game.html">Board Game</a></li>
                 <li><a href="musical_toy.html">Musical Toy</a></li>
-                <li><a href="puzzle.html">Puzzle Game</a></li>
-                <li><a href="building.html">Building Blocks</a></li>
+                <li><a href="puzzle_game.html">Puzzle Game</a></li>
+                <li><a href="building_blocks.html">Building Blocks</a></li>
                 <li><a href="sports_toy.html">Sports Toy</a></li>
                 <li><a href="creative_toy.html">Creative Toy</a></li>
                 <li><a href="baby_toy.html">Baby Toy</a></li>
@@ -203,7 +203,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="products.html">Sports Toys</a></b></h2>
+                    <h2 class="pt-5"><b><a href="sports_toy.html">Sports Toys</a></b></h2>
                 </div>
             </div>
             <div class="row">
@@ -445,14 +445,6 @@
     <!-- Sports end -->
 
 
-
-
-
-
-
-
-
-
     <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
@@ -470,24 +462,25 @@
                 </div>
                 <div class="col-md-3 px-5 pt-4 pb-4">
                     <div class="contact-form">
-                        <h2><a href="products.html">Toys & Games</a></h2>
+                        <h2><a href="toys-games.html">Toys & Games</a></h2>
                         <ul class="list-unstyled">
-                            <li class="mb-1"><a href="educational.html">Educational Toy</a></li>
+                            <li class="mb-1"><a href="educational_toy.html">Educational Toy</a></li>
 
-                            <li class="mb-1"><a href="construction.html">Construction Toy</a></li>
+                            <li class="mb-1"><a href="construction_toy.html">Construction Toy</a></li>
 
                             <li class="mb-1"><a href="board_game.html"> Board Game</a></li>
 
                             <li class="mb-1"> <a href="musical_toy.html">Musical Toy</a> </li>
 
-                            <li class="mb-1"> <a href="puzzle.html"> Puzzle Game </a> </li>
+                            <li class="mb-1"> <a href="puzzle_game.html"> Puzzle Game </a> </li>
 
-                            <li class="mb-1"> <a href="building.html"> Building Blocks </a> </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-2 pt-5 pb-4">
                     <ul class="list-unstyled pt-4">
+                        <li class="mb-1"> <a href="building_blocks.html"> Building Blocks </a> </li>
+
                         <li class="mb-1"><a href="sports_toy.html"> Sports Toy </a> </li>
 
                         <li class="mb-1"> <a href="creative_toy.html"> Creative Toy </a></li>
