--- a/construction_toy.html
+++ b/construction_toy.html
@@ -60,7 +60,8 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="construction_toy.html">Construction Toy
+                                                    <a class="dropdown-item" href="construction_toy.html">Construction
+                                                        Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -85,7 +86,8 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="building_blocks.html"> Building Blocks </a>
+                                                    <a class="dropdown-item" href="building_blocks.html"> Building
+                                                        Blocks </a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -267,11 +269,13 @@
                             <li><b>Educational Play: </b>Promotes early learning of shapes, colors, and spatial
                                 awareness.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/ykddhj" class="button" id="whats-link">
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Best Deal</a>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -327,17 +331,23 @@
                             </tbody>
                         </table>
                         <p class="mb-1 mt-2"><b>Starlink Building Blocks – 100 Pcs of Creative Construction Fun!</b></p>
-                        <p>Unleash your child's creativity with the Starlink Building Blocks – 100 Pcs set! These star-shaped, interlocking blocks are perfect for building colorful 2D and 3D creations that inspire imagination and support early development.</p>
+                        <p>Unleash your child's creativity with the Starlink Building Blocks – 100 Pcs set! These
+                            star-shaped, interlocking blocks are perfect for building colorful 2D and 3D creations that
+                            inspire imagination and support early development.</p>
                         <p><b>Features:</b></p>
                         <ul>
-                            <li><b>100 Interlocking Pieces: </b>Ample pieces for solo or group play, from simple shapes to complex structures.</li>
-                            <li><b>Creative Design: </b>Unique star-shaped blocks connect easily from multiple angles.</li>
+                            <li><b>100 Interlocking Pieces: </b>Ample pieces for solo or group play, from simple shapes
+                                to complex structures.</li>
+                            <li><b>Creative Design: </b>Unique star-shaped blocks connect easily from multiple angles.
+                            </li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/ahqf1z" class="button" id="whats-link">
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Best Deal</a>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -347,8 +357,8 @@
                     <img src="./assets/img/Products img/Edited/F106/71qwoFXadiL._AC_SL1200_.jpg" alt="construction_1"
                         class="img-fluid mainProductImage" id="mainDisplay2">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
-                        <img src="./assets/img/Products img/Edited/F106/71qwoFXadiL._AC_SL1200_.jpg" class="thumb-img active"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                        <img src="./assets/img/Products img/Edited/F106/71qwoFXadiL._AC_SL1200_.jpg"
+                            class="thumb-img active" onclick="changeImage2(this)" onmouseover="changeImage2(this)">
                         <img src="./assets/img/Products img/Edited/F106/71tYZdTWUiL._AC_SL1200_.jpg" class="thumb-img"
                             onclick="changeImage2(this)" onmouseover="changeImage2(this)">
                         <img src="./assets/img/Products img/Edited/F106/71U0hlVIeyL._AC_SL1200_.jpg" class="thumb-img"
@@ -393,17 +403,23 @@
                             </tbody>
                         </table>
                         <p class="mb-1 mt-2"><b>Snowflake Building Blocks – 100 Pcs of Endless Creative Play!</b></p>
-                        <p>Inspire young minds with the Snowflake Building Blocks – 100 Pcs set! These uniquely shaped interlocking pieces encourage imaginative construction and hands-on learning, making them a favorite among kids, parents, and educators.</p>
+                        <p>Inspire young minds with the Snowflake Building Blocks – 100 Pcs set! These uniquely shaped
+                            interlocking pieces encourage imaginative construction and hands-on learning, making them a
+                            favorite among kids, parents, and educators.</p>
                         <p><b>Features:</b></p>
                         <ul>
-                            <li><b>100 Snowflake-Shaped Pieces: </b>Build anything from simple shapes to complex 3D structures.</li>
-                            <li><b>Flexible & Interlocking Design: </b>Connect from multiple angles for endless building possibilities.</li>
+                            <li><b>100 Snowflake-Shaped Pieces: </b>Build anything from simple shapes to complex 3D
+                                structures.</li>
+                            <li><b>Flexible & Interlocking Design: </b>Connect from multiple angles for endless building
+                                possibilities.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                      <div class="text-center mt-4">
+                            <a href="https://wa.link/1ver02" class="button" id="whats-link">
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Best Deal</a>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -459,17 +475,23 @@
                             </tbody>
                         </table>
                         <p class="mb-1 mt-2"><b>Magnetic Stick & Ball Set – 24 Pcs of Creative Construction Fun!</b></p>
-                        <p>Unlock endless possibilities with this 24-piece Magnetic Stick & Ball Set! Perfect for young builders, this engaging STEM toy encourages creativity, coordination, and hands-on learning through magnetic connections.</p>
+                        <p>Unlock endless possibilities with this 24-piece Magnetic Stick & Ball Set! Perfect for young
+                            builders, this engaging STEM toy encourages creativity, coordination, and hands-on learning
+                            through magnetic connections.</p>
                         <p><b>Features:</b></p>
                         <ul>
-                            <li><b>24 Magnetic Pieces: </b>Includes colorful magnetic sticks and steel balls for versatile building.</li>
-                            <li><b>Creative Play: </b>Build 2D shapes or 3D structures – from simple designs to complex models.</li>
-                           </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                            <li><b>24 Magnetic Pieces: </b>Includes colorful magnetic sticks and steel balls for
+                                versatile building.</li>
+                            <li><b>Creative Play: </b>Build 2D shapes or 3D structures – from simple designs to complex
+                                models.</li>
+                        </ul>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/qmtgb5" class="button" id="whats-link">
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Best Deal</a>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -510,73 +532,81 @@
 
 
     <!-- footer start -->
-     <section class="contact mt-5">
+    <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
-                <div class="col-md-3 pt-4 pb-4">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
-                            class="img-fluid pb-4"></a><br>
-                    <i class="text-light">Shipra is your one-stop destination for high-quality products across
+                <div class="col-md-3 pt-4">
+                    <div class="row text-md-center">
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                                class="img-fluid pb-4"></a>
+                    </div>
+                    <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience, combining reliability, affordability, and variety. you're a
-                        parent looking for smart toys, a reseller searching for bulk deals, or a gift-giver seeking
-                        something unique, Shipra delivers trusted quality and unmatched service right to your doorstep.
-                    </i><br>
-
+                        a seamless shopping experience and affordability.
+                    </p>
                 </div>
-                <div class="col-md-3 px-5 pt-4 pb-4">
-                    <div class="contact-form">
-                        <h2><a href="toys-games.html">Toys & Games</a></h2>
-                        <ul class="list-unstyled">
-                            <li class="mb-1"><a href="educational_toy.html">Educational Toy</a></li>
+                <div class="col-lg-4 ms-auto col-md-5">
+                    <div class="row">
+                        <div class="col-12  pt-4 text-md-center">
+                            <h2 class="pt-2"><a href="toys-games.html">Toys & Games</a></h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-7 col-6">
+                            <div class="contact-form">
 
-                            <li class="mb-1"><a href="construction_toy.html">Construction Toy</a></li>
+                                <ul class="list-unstyled pt-3">
+                                    <li><a href="educational_toy.html">Educational Toy</a></li>
 
-                            <li class="mb-1"><a href="board_game.html"> Board Game</a></li>
+                                    <li><a href="construction_toy.html">Construction Toy</a></li>
 
-                            <li class="mb-1"> <a href="musical_toy.html">Musical Toy</a> </li>
+                                    <li><a href="board_game.html"> Board Game</a></li>
 
-                            <li class="mb-1"> <a href="puzzle_game.html"> Puzzle Game </a> </li>
+                                    <li> <a href="musical_toy.html">Musical Toy</a> </li>
 
-                        </ul>
+                                    <li> <a href="puzzle_game.html"> Puzzle Game </a> </li>
+
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-5 pt-3  col-6">
+                            <ul class="list-unstyled">
+                                <li> <a href="building_blocks.html"> Building Blocks </a> </li>
+
+                                <li><a href="sports_toy.html"> Sports Toy </a> </li>
+
+                                <li> <a href="creative_toy.html"> Creative Toy </a></li>
+
+                                <li> <a href="baby_toy.html"> Baby Toy</a></li>
+
+                                <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-2 pt-5 pb-4">
-                    <ul class="list-unstyled pt-4">
-                        <li class="mb-1"> <a href="building_blocks.html"> Building Blocks </a> </li>
-
-                        <li class="mb-1"><a href="sports_toy.html"> Sports Toy </a> </li>
-
-                        <li class="mb-1"> <a href="creative_toy.html"> Creative Toy </a></li>
-
-                        <li class="mb-1"> <a href="baby_toy.html"> Baby Toy</a></li>
-
-                        <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
-                    </ul>
-                </div>
-                <div class="col-md-4 pt-4 pb-4">
-                    <h2>Contact Us</h2>
+                <div class="col-md-4 pt-4 pb-4" id="contact-social-media">
+                    <h2 class="pt-2">Contact Us</h2>
                     <div class="d-flex">
-                        <div class="pt-1">
+                        <div class="pt-2">
                             <i class="fa-solid fa-location-dot contact-logo"></i>
                         </div>
-                        <div class="px-3">
-                            <span>Mumbai, Noida , Rajkot , Surat</span><br>
+                        <div class="px-3 pt-2">
+                            <span>Mumbai | Pune | Noida | Rajkot | Surat</span><br>
 
                         </div>
                     </div>
-                    <div class="d-flex pt-4">
+                    <div class="d-flex">
 
                         <div class="pt-1">
-                            <a href=" shooppingcrafts@gmail.com">
+                            <a href="mailto:shooppingcrafts@gmail.com">
                                 <i class="fa-solid fa-envelope contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>Send Email</span>
+                            <span>shooppingcrafts@gmail.com</span>
                         </div>
                         </a>
                     </div>
-                    <div class="d-flex pt-4">
+                    <div class="d-flex">
                         <div class="pt-1">
                             <a href="tel:9579613569 ">
                                 <i class="fa-solid fa-phone contact-logo"></i>
@@ -586,7 +616,7 @@
                         </div>
                         </a>
                     </div>
-                    <div class=" py-4 py-md-0 mt-md-4">
+                    <div class="py-md-0 mt-md-4">
                         <span class="pe-3">Share:</span>
                         <span class="contact-socialMediaIcon"><a href="https://www.facebook.com/shipraplayhouse"><i
                                     class="fa-brands fa-facebook-f"></i></a></span>
