--- a/creative_toy.html
+++ b/creative_toy.html
@@ -60,7 +60,8 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="construction_toy.html">Construction Toy
+                                                    <a class="dropdown-item" href="construction_toy.html">Construction
+                                                        Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -85,7 +86,8 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="building_blocks.html"> Building Blocks </a>
+                                                    <a class="dropdown-item" href="building_blocks.html"> Building
+                                                        Blocks </a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -267,11 +269,13 @@
                             <li><b>Exciting Motion Play: </b>Watch vehicles zoom through custom-designed paths with
                                 speed and style.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Best Deal</a>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/ay3dri" class="button" id="whats-link"> <span class="h4"><i
+                                        class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -336,24 +340,26 @@
                             <li><b>Stress & Anxiety Relief: </b>Great for relieving tension at work, school, or while
                                 traveling.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Best Deal</a>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/rjnt5u" class="button" id="whats-link"> <span class="h4"><i
+                                        class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="./assets/img/Products img/Edited/F205/1.jpg" alt="creative_1" class="img-fluid mainProductImage"
-                        id="mainDisplay2">
+                    <img src="./assets/img/Products img/Edited/F205/1.jpg" alt="creative_1"
+                        class="img-fluid mainProductImage" id="mainDisplay2">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F205/1.jpg" class="thumb-img active"
                             onclick="changeImage2(this)" onmouseover="changeImage2(this)">
-                        <img src="./assets/img/Products img/Edited/F205/2.jpg" class="thumb-img" onclick="changeImage2(this)"
-                            onmouseover="changeImage2(this)">
+                        <img src="./assets/img/Products img/Edited/F205/2.jpg" class="thumb-img"
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
                         <img src="./assets/img/Products img/Edited/F205/3.jpg" class="thumb-img"
                             onclick="changeImage2(this)" onmouseover="changeImage2(this)">
                         <img src="./assets/img/Products img/Edited/F205/4.jpg" class="thumb-img"
@@ -396,17 +402,22 @@
                             </tbody>
                         </table>
                         <p class="mb-1 mt-2"><b>Magic Beans Puzzle Spinner Cube – Twist, Slide & Solve!</b></p>
-                        <p>Keep hands and minds engaged with the Magic Beans Puzzle Spinner Cube – a colorful, interactive fidget toy that blends puzzle-solving fun with calming sensory play.</p>
+                        <p>Keep hands and minds engaged with the Magic Beans Puzzle Spinner Cube – a colorful,
+                            interactive fidget toy that blends puzzle-solving fun with calming sensory play.</p>
                         <p><b>Features:</b></p>
                         <ul>
-                            <li><b>Interactive Spinning Design: </b>Slide and rotate the bean-filled tracks to match colors and solve the puzzle.</li>
-                            <li><b>Color Sorting Challenge: </b>Encourages focus, logical thinking, and problem-solving skills.</li>
+                            <li><b>Interactive Spinning Design: </b>Slide and rotate the bean-filled tracks to match
+                                colors and solve the puzzle.</li>
+                            <li><b>Color Sorting Challenge: </b>Encourages focus, logical thinking, and problem-solving
+                                skills.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Best Deal</a>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/qvavzq" class="button" id="whats-link"> <span class="h4"><i
+                                        class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -438,82 +449,82 @@
     <!-- Creative end -->
 
 
-
-
-
-
-
-
-
-
     <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
-                <div class="col-md-3 pt-4 pb-4">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
-                            class="img-fluid pb-4"></a><br>
-                    <i class="text-light">Shipra is your one-stop destination for high-quality products across
+                <div class="col-md-3 pt-4">
+                    <div class="row text-md-center">
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                                class="img-fluid pb-4"></a>
+                    </div>
+                    <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience, combining reliability, affordability, and variety. you're a
-                        parent looking for smart toys, a reseller searching for bulk deals, or a gift-giver seeking
-                        something unique, Shipra delivers trusted quality and unmatched service right to your doorstep.
-                    </i><br>
-
+                        a seamless shopping experience and affordability.
+                    </p>
                 </div>
-                <div class="col-md-3 px-5 pt-4 pb-4">
-                    <div class="contact-form">
-                        <h2><a href="toys-games.html">Toys & Games</a></h2>
-                        <ul class="list-unstyled">
-                            <li class="mb-1"><a href="educational_toy.html">Educational Toy</a></li>
+                <div class="col-lg-4 ms-auto col-md-5">
+                    <div class="row">
+                        <div class="col-12  pt-4 text-md-center">
+                            <h2 class="pt-2"><a href="toys-games.html">Toys & Games</a></h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-7 col-6">
+                            <div class="contact-form">
 
-                            <li class="mb-1"><a href="construction_toy.html">Construction Toy</a></li>
+                                <ul class="list-unstyled pt-3">
+                                    <li><a href="educational_toy.html">Educational Toy</a></li>
 
-                            <li class="mb-1"><a href="board_game.html"> Board Game</a></li>
+                                    <li><a href="construction_toy.html">Construction Toy</a></li>
 
-                            <li class="mb-1"> <a href="musical_toy.html">Musical Toy</a> </li>
+                                    <li><a href="board_game.html"> Board Game</a></li>
 
-                            <li class="mb-1"> <a href="puzzle_game.html"> Puzzle Game </a> </li>
+                                    <li> <a href="musical_toy.html">Musical Toy</a> </li>
 
-                        </ul>
+                                    <li> <a href="puzzle_game.html"> Puzzle Game </a> </li>
+
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-5 pt-3  col-6">
+                            <ul class="list-unstyled">
+                                <li> <a href="building_blocks.html"> Building Blocks </a> </li>
+
+                                <li><a href="sports_toy.html"> Sports Toy </a> </li>
+
+                                <li> <a href="creative_toy.html"> Creative Toy </a></li>
+
+                                <li> <a href="baby_toy.html"> Baby Toy</a></li>
+
+                                <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-2 pt-5 pb-4">
-                    <ul class="list-unstyled pt-4">
-                        <li class="mb-1"> <a href="building_blocks.html"> Building Blocks </a> </li>
-
-                        <li class="mb-1"><a href="sports_toy.html"> Sports Toy </a> </li>
-
-                        <li class="mb-1"> <a href="creative_toy.html"> Creative Toy </a></li>
-
-                        <li class="mb-1"> <a href="baby_toy.html"> Baby Toy</a></li>
-
-                        <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
-                    </ul>
-                </div>
-                <div class="col-md-4 pt-4 pb-4">
-                    <h2>Contact Us</h2>
+                <div class="col-md-4 pt-4 pb-4" id="contact-social-media">
+                    <h2 class="pt-2">Contact Us</h2>
                     <div class="d-flex">
-                        <div class="pt-1">
+                        <div class="pt-2">
                             <i class="fa-solid fa-location-dot contact-logo"></i>
                         </div>
-                        <div class="px-3">
-                            <span>Mumbai, Noida , Rajkot , Surat</span><br>
+                        <div class="px-3 pt-2">
+                            <span>Mumbai | Pune | Noida | Rajkot | Surat</span><br>
 
                         </div>
                     </div>
-                    <div class="d-flex pt-4">
+                    <div class="d-flex">
 
                         <div class="pt-1">
-                            <a href=" shooppingcrafts@gmail.com">
+                            <a href="mailto:shooppingcrafts@gmail.com">
                                 <i class="fa-solid fa-envelope contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>Send Email</span>
+                            <span>shooppingcrafts@gmail.com</span>
                         </div>
                         </a>
                     </div>
-                    <div class="d-flex pt-4">
+                    <div class="d-flex">
                         <div class="pt-1">
                             <a href="tel:9579613569 ">
                                 <i class="fa-solid fa-phone contact-logo"></i>
@@ -523,7 +534,7 @@
                         </div>
                         </a>
                     </div>
-                    <div class=" py-4 py-md-0 mt-md-4">
+                    <div class="py-md-0 mt-md-4">
                         <span class="pe-3">Share:</span>
                         <span class="contact-socialMediaIcon"><a href="https://www.facebook.com/shipraplayhouse"><i
                                     class="fa-brands fa-facebook-f"></i></a></span>
