--- a/puzzle_game.html
+++ b/puzzle_game.html
@@ -258,11 +258,12 @@
                             <li><b>Pocket-Sized Portability: </b>Ideal for travel, school, or the office—fidget anytime, anywhere.</li>
                             <li><b>Sturdy & Safe: </b>Made from high-quality, non-toxic materials built for daily use.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Based Del</a>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/szzaxp" class="button" id="whats-link">   <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -319,11 +320,12 @@
                             <li><b>Progressive Play: </b>Activity cards introduce increasing levels of difficulty, promoting long-term engagement and growth.</li>
                             <li><b>24 Guided Activity Cards: </b>acked with shape-matching games, patterns, and sorting challenges that grow with your child.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Based Del</a>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/5ygciv" class="button" id="whats-link">   <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -380,11 +382,12 @@
                             <li><b>Safe & Durable: </b>Crafted from high-quality, non-toxic materials built to withstand enthusiastic play.</li>
                             <li><b>Educational & Fun: </b>A playful way to explore shapes, patterns, and color recognition.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Based Del</a>
+                       <div class="text-center mt-4">
+                            <a href="https://wa.link/tpd8i5" class="button" id="whats-link">   <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -441,11 +444,12 @@
                             <li><b>Silent Operation: </b>Smooth, quiet movement means no distractions – perfect for classrooms, offices, or travel.</li>
                             <li><b>Highly Engaging: </b>Simple, sensory fun that users can’t put down.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Based Del</a>
+                         <div class="text-center mt-4">
+                            <a href="https://wa.link/cwtzzw" class="button" id="whats-link">   <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -502,11 +506,12 @@
                             <li><b>Fine Motor Development: </b>Enhances hand-eye coordination and dexterity through playful manipulation.</li>
                             <li><b>Sturdy and Safe: </b>Crafted from durable, high-quality materials for long-lasting, worry-free play.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Based Del</a>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/bmcmcc" class="button" id="whats-link">   <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -563,11 +568,12 @@
                             <li><b>Skill-Building Fun: </b>Boosts critical thinking, hand-eye coordination, and friendly competition.</li>
                             <li><b>Built to Last:</b>Crafted from durable, non-toxic materials for safe and long-lasting play.</li>
                         </ul>
-                        <div class="text-center">
-                            <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                Get Based Del</a>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/2ihmtk" class="button" id="whats-link">   <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -600,81 +606,82 @@
 
 
 
-
-
-
-
-
-
-
     <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
-                <div class="col-md-3 pt-4 pb-4">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
-                            class="img-fluid pb-4"></a><br>
-                    <i class="text-light">Shipra is your one-stop destination for high-quality products across
+                <div class="col-md-3 pt-4">
+                    <div class="row text-md-center">
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                                class="img-fluid pb-4"></a>
+                    </div>
+                    <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience, combining reliability, affordability, and variety. you're a
-                        parent looking for smart toys, a reseller searching for bulk deals, or a gift-giver seeking
-                        something unique, Shipra delivers trusted quality and unmatched service right to your doorstep.
-                    </i><br>
-
+                        a seamless shopping experience and affordability.
+                    </p>
                 </div>
-                <div class="col-md-3 px-5 pt-4 pb-4">
-                    <div class="contact-form">
-                        <h2><a href="toys-games.html">Toys & Games</a></h2>
-                        <ul class="list-unstyled">
-                            <li class="mb-1"><a href="educational_toy.html">Educational Toy</a></li>
+                <div class="col-lg-4 ms-auto col-md-5">
+                    <div class="row">
+                        <div class="col-12  pt-4 text-md-center">
+                            <h2 class="pt-2"><a href="toys-games.html">Toys & Games</a></h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-7 col-6">
+                            <div class="contact-form">
 
-                            <li class="mb-1"><a href="construction_toy.html">Construction Toy</a></li>
+                                <ul class="list-unstyled pt-3">
+                                    <li><a href="educational_toy.html">Educational Toy</a></li>
 
-                            <li class="mb-1"><a href="board_game.html"> Board Game</a></li>
+                                    <li><a href="construction_toy.html">Construction Toy</a></li>
 
-                            <li class="mb-1"> <a href="musical_toy.html">Musical Toy</a> </li>
+                                    <li><a href="board_game.html"> Board Game</a></li>
 
-                            <li class="mb-1"> <a href="puzzle_game.html"> Puzzle Game </a> </li>
+                                    <li> <a href="musical_toy.html">Musical Toy</a> </li>
 
-                        </ul>
+                                    <li> <a href="puzzle_game.html"> Puzzle Game </a> </li>
+
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-5 pt-3  col-6">
+                            <ul class="list-unstyled">
+                                <li> <a href="building_blocks.html"> Building Blocks </a> </li>
+
+                                <li><a href="sports_toy.html"> Sports Toy </a> </li>
+
+                                <li> <a href="creative_toy.html"> Creative Toy </a></li>
+
+                                <li> <a href="baby_toy.html"> Baby Toy</a></li>
+
+                                <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-2 pt-5 pb-4">
-                    <ul class="list-unstyled pt-4">
-                        <li class="mb-1"> <a href="building_blocks.html"> Building Blocks </a> </li>
-
-                        <li class="mb-1"><a href="sports_toy.html"> Sports Toy </a> </li>
-
-                        <li class="mb-1"> <a href="creative_toy.html"> Creative Toy </a></li>
-
-                        <li class="mb-1"> <a href="baby_toy.html"> Baby Toy</a></li>
-
-                        <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
-                    </ul>
-                </div>
-                <div class="col-md-4 pt-4 pb-4">
-                    <h2>Contact Us</h2>
+                <div class="col-md-4 pt-4 pb-4" id="contact-social-media">
+                    <h2 class="pt-2">Contact Us</h2>
                     <div class="d-flex">
-                        <div class="pt-1">
+                        <div class="pt-2">
                             <i class="fa-solid fa-location-dot contact-logo"></i>
                         </div>
-                        <div class="px-3">
-                            <span>Mumbai, Noida , Rajkot , Surat</span><br>
+                        <div class="px-3 pt-2">
+                            <span>Mumbai | Pune | Noida | Rajkot | Surat</span><br>
 
                         </div>
                     </div>
-                    <div class="d-flex pt-4">
+                    <div class="d-flex">
 
                         <div class="pt-1">
-                            <a href=" shooppingcrafts@gmail.com">
+                            <a href="mailto:shooppingcrafts@gmail.com">
                                 <i class="fa-solid fa-envelope contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>Send Email</span>
+                            <span>shooppingcrafts@gmail.com</span>
                         </div>
                         </a>
                     </div>
-                    <div class="d-flex pt-4">
+                    <div class="d-flex">
                         <div class="pt-1">
                             <a href="tel:9579613569 ">
                                 <i class="fa-solid fa-phone contact-logo"></i>
@@ -684,7 +691,7 @@
                         </div>
                         </a>
                     </div>
-                    <div class=" py-4 py-md-0 mt-md-4">
+                    <div class="py-md-0 mt-md-4">
                         <span class="pe-3">Share:</span>
                         <span class="contact-socialMediaIcon"><a href="https://www.facebook.com/shipraplayhouse"><i
                                     class="fa-brands fa-facebook-f"></i></a></span>
