--- a/toys-games.html
+++ b/toys-games.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-  <!-- Header start -->
+    <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -54,12 +54,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="educational_toy.html"> Educational Toy</a>
+                                                    <a class="dropdown-item" href="educational_toy.html"> Educational
+                                                        Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="construction_toy.html">Construction Toy </a>
+                                                    <a class="dropdown-item" href="construction_toy.html">Construction
+                                                        Toy </a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -83,7 +85,8 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="building_blocks.html"> Building Blocks </a>
+                                                    <a class="dropdown-item" href="building_blocks.html"> Building
+                                                        Blocks </a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -729,7 +732,7 @@
                             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-2 row-cols-1">
                                 <div class="col d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/birthday_gifts/birthday_gifts_1.webp"
+                                        <img src="./assets/img/birthday_gifts/cap.webp"
                                             class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Tic Tac Toe Game</h5>
@@ -741,7 +744,7 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/birthday_gifts/birthday_gifts_2.webp"
+                                        <img src="./assets/img/birthday_gifts/chocolate.webp"
                                             class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Magic Beans Cube</h5>
@@ -753,7 +756,7 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/birthday_gifts/birthday_gifts_3.webp"
+                                        <img src="./assets/img/birthday_gifts/jacket.jpg"
                                             class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Infinity Track Toy</h5>
@@ -765,7 +768,7 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/birthday_gifts/birthday_gifts_4.webp"
+                                        <img src="./assets/img/birthday_gifts/bag.jpg"
                                             class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Table Tennis Toy</h5>
@@ -777,7 +780,7 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/birthday_gifts/birthday_gifts_5.webp"
+                                        <img src="./assets/img/birthday_gifts/bottal.jpg"
                                             class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Table Tennis Toy</h5>
@@ -789,7 +792,7 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/birthday_gifts/birthday_gifts_6.webp"
+                                        <img src="./assets/img/birthday_gifts/personalized-happy-birthday.jpg"
                                             class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Infinity Track Toy</h5>
@@ -806,7 +809,7 @@
                             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-2 row-cols-1">
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/home_game-2.webp" class="card-img-top" alt="...">
+                                        <img src="./assets/img/corporate_img/bag.webp" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Tri ring Game</h5>
                                             <p class="card-text">A fun, brain-boosting, and engaging ring arrangement
@@ -817,7 +820,7 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/home_game-2.webp" class="card-img-top" alt="...">
+                                        <img src="./assets/img/corporate_img/bottles.jpeg" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Tri ring Game</h5>
                                             <p class="card-text">A fun, brain-boosting, and engaging ring arrangement
@@ -828,7 +831,7 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/home_game-2.webp" class="card-img-top" alt="...">
+                                        <img src="./assets/img/corporate_img/cap.webp" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Tri ring Game</h5>
                                             <p class="card-text">A fun, brain-boosting, and engaging ring arrangement
@@ -839,7 +842,7 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/home_game-2.webp" class="card-img-top" alt="...">
+                                        <img src="./assets/img/corporate_img/mug1.webp" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Tri ring Game</h5>
                                             <p class="card-text">A fun, brain-boosting, and engaging ring arrangement
@@ -850,7 +853,7 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/home_game-2.webp" class="card-img-top" alt="...">
+                                        <img src="./assets/img/corporate_img/Mug.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Tri ring Game</h5>
                                             <p class="card-text">A fun, brain-boosting, and engaging ring arrangement
@@ -861,7 +864,7 @@
                                 </div>
                                 <div class="col  d-flex mb-3">
                                     <div class="card">
-                                        <img src="./assets/img/home_game-2.webp" class="card-img-top" alt="...">
+                                        <img src="./assets/img/corporate_img/T-shirt.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Tri ring Game</h5>
                                             <p class="card-text">A fun, brain-boosting, and engaging ring arrangement
@@ -1120,7 +1123,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col  d-flex mb-3">
+                                <!-- <div class="col  d-flex mb-3">
                                     <div class="card">
                                         <img src="./assets/img/outdoor/outdoor_4.webp" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -1152,7 +1155,7 @@
                                             <a href="outdoor_toy.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -1162,73 +1165,81 @@
     </section>
     <!-- Product section end -->
     <!-- footer start -->
-     <section class="contact mt-5">
+    <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
-                <div class="col-md-3 pt-4 pb-4">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
-                            class="img-fluid pb-4"></a><br>
-                    <i class="text-light">Shipra is your one-stop destination for high-quality products across
+                <div class="col-md-3 pt-4">
+                    <div class="row text-md-center">
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                                class="img-fluid pb-4"></a>
+                    </div>
+                    <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience, combining reliability, affordability, and variety. you're a
-                        parent looking for smart toys, a reseller searching for bulk deals, or a gift-giver seeking
-                        something unique, Shipra delivers trusted quality and unmatched service right to your doorstep.
-                    </i><br>
-
+                        a seamless shopping experience and affordability.
+                    </p>
                 </div>
-                <div class="col-md-3 px-5 pt-4 pb-4">
-                    <div class="contact-form">
-                        <h2><a href="toys-games.html">Toys & Games</a></h2>
-                        <ul class="list-unstyled">
-                            <li class="mb-1"><a href="educational_toy.html">Educational Toy</a></li>
+                <div class="col-lg-4 ms-auto col-md-5">
+                    <div class="row">
+                        <div class="col-12  pt-4 text-md-center">
+                            <h2 class="pt-2"><a href="toys-games.html">Toys & Games</a></h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-7 col-6">
+                            <div class="contact-form">
 
-                            <li class="mb-1"><a href="construction_toy.html">Construction Toy</a></li>
+                                <ul class="list-unstyled pt-3">
+                                    <li><a href="educational_toy.html">Educational Toy</a></li>
 
-                            <li class="mb-1"><a href="board_game.html"> Board Game</a></li>
+                                    <li><a href="construction_toy.html">Construction Toy</a></li>
 
-                            <li class="mb-1"> <a href="musical_toy.html">Musical Toy</a> </li>
+                                    <li><a href="board_game.html"> Board Game</a></li>
 
-                            <li class="mb-1"> <a href="puzzle_game.html"> Puzzle Game </a> </li>
+                                    <li> <a href="musical_toy.html">Musical Toy</a> </li>
 
-                        </ul>
+                                    <li> <a href="puzzle_game.html"> Puzzle Game </a> </li>
+
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-5 pt-3  col-6">
+                            <ul class="list-unstyled">
+                                <li> <a href="building_blocks.html"> Building Blocks </a> </li>
+
+                                <li><a href="sports_toy.html"> Sports Toy </a> </li>
+
+                                <li> <a href="creative_toy.html"> Creative Toy </a></li>
+
+                                <li> <a href="baby_toy.html"> Baby Toy</a></li>
+
+                                <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-2 pt-5 pb-4">
-                    <ul class="list-unstyled pt-4">
-                        <li class="mb-1"> <a href="building_blocks.html"> Building Blocks </a> </li>
-
-                        <li class="mb-1"><a href="sports_toy.html"> Sports Toy </a> </li>
-
-                        <li class="mb-1"> <a href="creative_toy.html"> Creative Toy </a></li>
-
-                        <li class="mb-1"> <a href="baby_toy.html"> Baby Toy</a></li>
-
-                        <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
-                    </ul>
-                </div>
-                <div class="col-md-4 pt-4 pb-4">
-                    <h2>Contact Us</h2>
+                <div class="col-md-4 pt-4 pb-4" id="contact-social-media">
+                    <h2 class="pt-2">Contact Us</h2>
                     <div class="d-flex">
-                        <div class="pt-1">
+                        <div class="pt-2">
                             <i class="fa-solid fa-location-dot contact-logo"></i>
                         </div>
-                        <div class="px-3">
-                            <span>Mumbai, Noida , Rajkot , Surat</span><br>
+                        <div class="px-3 pt-2">
+                            <span>Mumbai | Pune | Noida | Rajkot | Surat</span><br>
 
                         </div>
                     </div>
-                    <div class="d-flex pt-4">
+                    <div class="d-flex">
 
                         <div class="pt-1">
-                            <a href=" shooppingcrafts@gmail.com">
+                            <a href="mailto:shooppingcrafts@gmail.com">
                                 <i class="fa-solid fa-envelope contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>Send Email</span>
+                            <span>shooppingcrafts@gmail.com</span>
                         </div>
                         </a>
                     </div>
-                    <div class="d-flex pt-4">
+                    <div class="d-flex">
                         <div class="pt-1">
                             <a href="tel:9579613569 ">
                                 <i class="fa-solid fa-phone contact-logo"></i>
@@ -1238,7 +1249,7 @@
                         </div>
                         </a>
                     </div>
-                    <div class=" py-4 py-md-0 mt-md-4">
+                    <div class="py-md-0 mt-md-4">
                         <span class="pe-3">Share:</span>
                         <span class="contact-socialMediaIcon"><a href="https://www.facebook.com/shipraplayhouse"><i
                                     class="fa-brands fa-facebook-f"></i></a></span>
