--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="toys-games.html"><img src="./assets/img/home_game-4.webp" alt="#" class="img-fluid"></a>
+                            <a href="toys-games.html"><img src="./assets/img/1.jpeg" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
-                                <a href="toys-games.html"> Building Block</a>
+                                <a href="toys-games.html">Swing Tower</a>
                             </h2>
                         </div>
                     </div>
